applying new refactor, import/export successful

--- a/PsdFile/PsdFile.asmdef
+++ b/PsdFile/PsdFile.asmdef
@@ -1,14 +1,12 @@
 {
-    "name": "Needle.PsdFile",
+    "name": "PsdFile",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": true,
-    "precompiledReferences": [
-        "System.Drawing.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
