--- a/Editor/Needle.PsdFile.Editor.asmdef
+++ b/Editor/Needle.PsdFile.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Needle.PsdFile.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:b9b45bb934e52e94ba4ae0c70d70f248"
+        "GUID:b9b45bb934e52e94ba4ae0c70d70f248",
+        "GUID:180bd8dff846c87459a5c2d3b5051f2b"
     ],
     "includePlatforms": [
         "Editor"
