--- a/projects/PSD-2020.3/Packages/manifest.json
+++ b/projects/PSD-2020.3/Packages/manifest.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "com.gkngkc.usfb": "1.1.3",
+    "com.gkngkc.usfb": "https://github.com/prefrontalcortex/usfb.git/?path=/Assets/UniStandaloneFileBrowser", 
     "com.pfc.psd": "file:../../../package",
+    "com.pfc.psd-shared-assets": "file:../../SharedAssets",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
