--- a/package/Samples/Scripts/Needle.PsdFile.Sample.asmdef
+++ b/package/Samples/Scripts/Needle.PsdFile.Sample.asmdef
@@ -6,7 +6,8 @@
         "GUID:180bd8dff846c87459a5c2d3b5051f2b",
         "GUID:dfd4dd069f777a943b33ee54f1a6a649",
         "GUID:69f072ba8fc33de469fe24734c3f64fa",
-        "GUID:8c09aa1e4b73db04094be9d510142dd2"
+        "GUID:8c09aa1e4b73db04094be9d510142dd2",
+        "GUID:023ac9b81facd43ebbb2a6f1c6252835"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
