--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ projects/*/UIElementsSchema
 projects/*/obj
 projects/PSD-2020.3/*.psd
 projects/*/*.user
+projects/*/Builds
+projects/SharedAssets/**/*-exported.*
