--- a/package/Editor/pfc.PsdFile.Editor.asmdef
+++ b/package/Editor/pfc.PsdFile.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Needle.PsdFile.Editor",
+    "name": "pfc.PsdFile.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:b9b45bb934e52e94ba4ae0c70d70f248",
